# Family-Calendar

./: .gitignore  README.md  config.example.yaml
backend/: pyproject.toml
backend/app/: birthday_feed.py  caldav_client.py  config.py  db.py  ecobee_client.py  events_bus.py  govee_client.py  holiday_feed.py  main.py  models.py  reminder_engine.py  reminder_scheduler.py  ring_client.py  schemas.py  sync.py  timeutil.py  weather.py
backend/app/routers/: allowance.py  chores.py  config.py  countdowns.py  ecobee.py  events.py  grocery.py  hero.py  lights.py  meals.py  network.py  notes.py  photos.py  recipes.py  reminders.py  ring.py  settings.py  stream.py  weather.py
backend/app/static/: drop.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AllowanceChoreModal.tsx  CalendarLegend.tsx  CalendarView.tsx  Chores.tsx  ChoresPage.tsx  Clock.tsx  ConnectionStatus.tsx  DayDetailModal.tsx  EventDetailsModal.tsx  EventModal.tsx  GroceryModal.tsx  HeroBanner.tsx  HomePage.tsx  MealPlannerPage.tsx  NotesButton.tsx  NotesModal.tsx  OnScreenKeyboard.tsx  PagesContainer.tsx  PeopleModal.tsx  PhotoSlideshow.tsx  RecipesModal.tsx  RingCameras.tsx  SettingsButton.tsx  SettingsModal.tsx  ThemeToggle.tsx  Todos.tsx  ViewToggle.tsx  Weather.tsx
frontend/src/lib/: sse.ts  theme.ts
scripts/: calendar-backend.service.tmpl  calendar-kiosk.desktop.tmpl  install-splash.sh  setup-pi-lite.sh  setup-pi.sh  start-kiosk.sh  xinit-kiosk.sh  xinitrc.tmpl
(+6 files in other folders)
